# zotbridge

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API.md  CLI.md  MCP.md  MULTI_ACCOUNT_SERVER_SETUP.md  README.md  RECOVERY.md  REMOTE_SYNC.md  SKILLS.md  USE_CASES.md
scripts/: bump_version.py
src/zotbridge/: agent_setup.py  api.py  architecture.py  capabilities.py  citations.py  cli.py  cli_ui.py  config.py  daemon.py  installer_update.py  library_routing.py  mcp.py  observability.py  qmd.py  raw_cli.py  recovery.py  runtime.py  service.py  setup_wizard.py  sync.py  utils.py  web_api.py
src/zotbridge/adapters/: __init__.py
src/zotbridge/core/: __init__.py  models.py
tests/: test_agent_setup.py  test_api.py  test_architecture.py  test_capabilities.py  test_citations.py  test_cli.py  test_cli_raw.py  test_cli_ui.py  test_config_profiles.py  test_core_store.py  test_daemon.py  test_installer_update.py  test_library_routing.py  test_mcp.py  test_qmd.py  test_recovery.py  test_service.py  test_setup_wizard.py  test_store.py  test_web_api.py  test_web_sync_adapter.py
