[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zotbridge"
version = "1.2.0"
description = "A Zotero integration layer for agents, apps, and scripts, with Web API sync, HTTP/MCP access, semantic search over libraries, and recoverable headless state."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Robin Rademacher" }]
dependencies = [
  "click>=8.1.8",
  "questionary>=2.1.0",
  "rich>=14.0.0",
  "typer>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/robinradx/zotbridge"
Repository = "https://github.com/robinradx/zotbridge"
Issues = "https://github.com/robinradx/zotbridge/issues"

[project.scripts]
zotbridge = "zotbridge.cli:main"
zotbridge-daemon = "zotbridge.daemon:main"
zotbridge-mcp = "zotbridge.mcp:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
